--- a/src/Component/WhatWeAreDoing/WhatWeAreDoing.module.css
+++ b/src/Component/WhatWeAreDoing/WhatWeAreDoing.module.css
@@ -614,11 +614,11 @@ body[dir="ltr"] .contactBtn:hover i {
   }
 
   .section :global(.swiper-button-prev) {
-    transform: translateX(calc(-50% - 60px));
+    left: calc(50% - 80px);
   }
 
   .section :global(.swiper-button-next) {
-    transform: translateX(calc(50% + 60px));
+    right: calc(50% - 80px);
   }
 
   .section :global(.swiper-button-prev)::after,
