--- a/src/Component/MobileNav/MobileNav.module.css
+++ b/src/Component/MobileNav/MobileNav.module.css
@@ -430,6 +430,10 @@ body[dir="ltr"] .menuLink:hover .menuChevron {
   border-radius: 8px;
   border-top: 1px solid var(--gray-100);
   transition: all 0.15s ease;
+  -webkit-transition: all 0.15s ease;
+  -moz-transition: all 0.15s ease;
+  -ms-transition: all 0.15s ease;
+  -o-transition: all 0.15s ease;
 }
 
 .submenuViewAll:hover {
